Fixed alignment for fields webpage by using bootstrap gridding

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,15 +2,6 @@ header {
     background-image: url(../img/header.jpg);
 }
 
-hr.style-five {
-    border: 0;
-    height: 0; /* Firefox... */
-    box-shadow: 0 0 10px 1px black;
-}
-hr.style-five:after {  /* Not really supposed to work, but does */
-    content: "\00a0";  /* Prevent margin collapse */
-}
-
 .form-horizontal .control-label{
     text-align:left !important;
 }
@@ -26,4 +17,5 @@ a.white-icon{
 .form-action{
     padding: inherit;
 }
+
 .top-buffer { margin-top:20px; }
